Duplicated Files from FNN Project

--- a/testing.html
+++ b/testing.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <link rel="icon" href="images/Fnn_logo.png">
     <meta charset="utf-8">
     <meta name=\viewport" content="width=device-width">
-    <title>FNN - Home</title>
+    <title>FNN - Testing</title>
     <link href="\css\style.css" rel="stylesheet" type="text/css" />
     <nav>
         <logo><img src="\images\Fnn_logo.svg" width="70" height="65" alt=""></logo>
@@ -16,13 +15,12 @@
         <a href="\donate">Donate</a>
     </nav>
 </head>
-<h1>Home</h1>
-
-<body>
-    <p>Welcome to FNN! </p>
-    <p>The bestest news network in the whole world!!</p>
-    <p>Click on a link above to go somewhere. </p>
-    <p>...Or you can just stay here.</p>
-</body>
-
+</head>
+  <h1>Welcome to the testing page!!</h1>
+  <body>
+    <p>This is the testing page where we test things.</p>
+    <p>It will not alwasys be the same.</p>
+    <p>We change it when we test things.</p>
+    <p>Hence why we call it the testing page.</p>
+  </body>
 </html>
