--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="images/Fnn_logo.png">
     <meta charset="utf-8">
     <meta name=\viewport" content="width=device-width">
-    <title>FNN - Home</title>
+    <title>FNN - About</title>
     <link href="\css\style.css" rel="stylesheet" type="text/css" />
     <nav>
         <logo><img src="\images\Fnn_logo.svg" width="70" height="65" alt=""></logo>
@@ -16,13 +16,14 @@
         <a href="\donate">Donate</a>
     </nav>
 </head>
-<h1>Home</h1>
+<h1>About</h1>
 
 <body>
-    <p>Welcome to FNN! </p>
-    <p>The bestest news network in the whole world!!</p>
-    <p>Click on a link above to go somewhere. </p>
-    <p>...Or you can just stay here.</p>
+    <p>FNN is a U.S.A based, one-of-a-kind, news service.</p>
+    <p>Our team of editors hand pick stories from all over the world to bring to you for free!</p>
+    <p>If there is a significant event happening anywhere the world,</p>
+    <p>from the most secret to the most earth-shattering, we'll cover it.</p>
+    <p>Most of what we cover is FNN-only news. So you won't find it anywhere else!</p>
 </body>
 
 </html>
