Reformatted head tags to work with new filesystem

--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
     <link rel="icon" href="images/Fnn_logo.png">
     <meta charset="utf-8">
     <meta name=\viewport" content="width=device-width">
-    <title>FNN - Home</title>
+    <title>FNN - </title>
     <link href="\css\style.css" rel="stylesheet" type="text/css" />
     <nav>
         <logo><img src="\images\Fnn_logo.svg" width="70" height="65" alt=""></logo>
-        <a href="\">Home</a>
-        <a href="\new">New!</a>
-        <a href="\articles">Articles</a>
-        <a href="\about">About</a>
-        <a href="\donate">Donate</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
     </nav>
 </head>
+
 <h1>Home</h1>
 
 <body>
