--- a/about.html
+++ b/about.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html>
-
+    
 <head>
     <link rel="icon" href="images/Fnn_logo.png">
     <meta charset="utf-8">
     <meta name=\viewport" content="width=device-width">
-    <title>FNN - About</title>
+    <title>FNN - </title>
     <link href="\css\style.css" rel="stylesheet" type="text/css" />
     <nav>
         <logo><img src="\images\Fnn_logo.svg" width="70" height="65" alt=""></logo>
-        <a href="\">Home</a>
-        <a href="\new">New!</a>
-        <a href="\articles">Articles</a>
-        <a href="\about">About</a>
-        <a href="\donate">Donate</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
     </nav>
 </head>
-<h1>About</h1>
+  <h1>About</h1>
 
-<body>
+  <body>
     <p>FNN is a U.S.A based, one-of-a-kind, news service.</p>
-    <p>Our team of editors hand pick stories from all over the world to bring to you for free!</p>
+    <p>
+      Our team of editors hand pick stories from all over the world to bring to
+      you for free!
+    </p>
     <p>If there is a significant event happening anywhere the world,</p>
     <p>from the most secret to the most earth-shattering, we'll cover it.</p>
-    <p>Most of what we cover is FNN-only news. So you won't find it anywhere else!</p>
-</body>
-
+    <p>
+      Most of what we cover is FNN-only news. So you won't find it anywhere
+      else!
+    </p>
+  </body>
 </html>
