--- a/index.html
+++ b/index.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <link rel="icon" href="images/Fnn_logo.png">
-    <meta charset="utf-8">
+  <head>
+    <link rel="icon" href="images/Fnn_logo.png" />
+    <meta charset="utf-8" />
     <meta name=\viewport" content="width=device-width">
-    <title>FNN - </title>
+    <title>FNN -</title>
     <link href="\css\style.css" rel="stylesheet" type="text/css" />
     <nav>
-        <logo><img src="\images\Fnn_logo.svg" width="70" height="65" alt=""></logo>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
+      <logo
+        ><img src="\images\Fnn_logo.svg" width="70" height="65" alt=""
+      /></logo>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
     </nav>
-</head>
+  </head>
 
-<h1>Home</h1>
+  <h1>Home</h1>
 
-<body>
-    <p>Welcome to FNN! </p>
-    <p>The bestest news network in the whole world!!</p>
-    <p>Click on a link above to go somewhere. </p>
-    <p>...Or you can just stay here.</p>
-</body>
-
+  <body>
+    <p></p>
+  </body>
 </html>
