--- a/testing.html
+++ b/testing.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link rel="icon" href="images/Fnn_logo.png">
-  <meta charset="utf-8">
-  <meta name=\viewport" content="width=device-width">
-  <title>FNN - </title>
-  <link href="\css\style.css" rel="stylesheet" type="text/css" />
-  <nav>
-    <logo><img src="\images\Fnn_logo.svg" width="70" height="65" alt=""></logo>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-  </nav>
-</head>
+  <head>
+    <link rel="icon" href="images/Fnn_logo.png" />
+    <meta charset="utf-8" />
+    <meta name=\viewport" content="width=device-width">
+    <title>FNN -</title>
+    <link href="\css\style.css" rel="stylesheet" type="text/css" />
+    <nav>
+      <logo
+        ><img src="\images\Fnn_logo.svg" width="70" height="65" alt=""
+      /></logo>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+    </nav>
+  </head>
 
   <h1>Welcome to the testing page!!</h1>
   <body>
-    <p>This is the testing page where we test things.</p>
-    <p>It will not alwasys be the same.</p>
-    <p>We change it when we test things.</p>
-    <p>Hence why we call it the testing page.</p>
+    <p></p>
   </body>
 </html>
