Added some "Hello World" text

--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
       <a href="about.html">About</a>
     </nav>
   </head>
-
-  <h1>Home</h1>
+  <h1>Hello World!</h1>
 
   <body>
-    <p></p>
+    <p>This is a website!</p>
   </body>
 </html>
