Updated titles to work match pages

--- a/testing.html
+++ b/testing.html
@@ -4,7 +4,7 @@
     <link rel="icon" href="images/Fnn_logo.png" />
     <meta charset="utf-8" />
     <meta name=\viewport" content="width=device-width">
-    <title>FNN -</title>
+    <title>Testing - CoyoteFox</title>
     <link href="\css\style.css" rel="stylesheet" type="text/css" />
     <nav>
       <logo
