--- a/testing.html
+++ b/testing.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="icon" href="images/Fnn_logo.png" />
+    <link rel="icon" href="images/logo.png" />
     <meta charset="utf-8" />
-    <meta name=\viewport" content="width=device-width">
+    <meta name=/viewport" content="width=device-width">
     <title>Testing - CoyoteFox</title>
-    <link href="\css\style.css" rel="stylesheet" type="text/css" />
+    <link href="/css/style.css" rel="stylesheet" type="text/css" />
     <nav>
       <logo
-        ><img src="\images\Fnn_logo.svg" width="70" height="65" alt=""
+        ><img src="/images/logo.png" width="70" height="70" alt=""
       /></logo>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
